# clipcannon

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/: agent-analysis-findings.md  agent-implementation-summary.md  agent1-state-fix.md  agent10-review.md  agent2-vlm-filter.md  agent3-type-safety.md  agent4-error-propagation.md  agent5-math-sigkill.md  agent6-migrations.md  agent7-search-scoring.md  agent8-cleanup.md  agent9-tests.md  audit-fix-coordination.md  code-simplifier-report.md  forensic-verification-report.md  statusline.sh  verification-results.md
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/agents/: atomic-task-generator.md  constitution-architect.md  functional-spec-writer.md  plan_w_team.md  technical-spec-writer.md
.claude/commands/: commit.md  pushrepo.md  sitrep.md
.claude/helpers/: guidance-hooks.sh  metrics-db.mjs  perf-worker.sh  update-v3-progress.sh  v3-quick-status.sh
assets/profanity/: wordlist.txt
benchmarks/publish/: app.py  arxiv_technical_report.md  huggingface_model_card.md  huggingface_space_app.py
benchmarks/results/: 00_all_results.json  01_sv_eer.json  02_ablation.json  03_scaling.json  04_corrected_crossencoder.json  05_optimized_crossencoder.json  06_wavlm_optimized.json  07_seedtts_eval.json  08_seedtts_optimized.json  09_seedtts_final.json  10_auto_optimize.json  auto_optimize_log.jsonl
benchmarks/scripts/: auto_optimize_cosyvoice.py  benchmark_suite.py  gradient_optimize.py  (+7 more)
config/: default_config.json  docker-compose.yml
docsvoice/: 00_implementation_index.md  01_phase1_core_pipeline.md  02_phase2_companion.md  03_phase3_memory.md  04_phase4_intelligence.md  05_phase5_hardening.md  ai_voice_agent_benchmarks.md  constitution.md  prd_voice_agent.md
scripts/: curate_training_data.py  docker-entrypoint.sh  download_models.py  extract_all_embeddings.py  extract_visemes.py  gpu  jarvis-service.sh  label_training_clips.py  launch_santa_bot.sh  lipsync_refine.py  musetalk_postprocess.py  precompute_face_landmarks.py  rebuild_santa_embeddings_and_train.py  santa_meet_bot.py  setup.sh  train_cogvideo_lora.py  train_cogvideox_lora.py  train_echomimicv3_lora.py  train_radnerf.sh  train_santa_lipsync.py  validate_gpu.py  y4m_pipe_writer.py
specs/: constitution.md
tests/: conftest.py  fsv_billing_dashboard.py  fsv_core_infrastructure.py  fsv_part1_pipeline.py  fsv_parts_3_to_7.py  fsv_pipeline_tools.py  fsv_server_integration.py  manual_fsv_full.py  manual_fsv_iterative.py  manual_fsv_phase3.py  test_audio_generation.py  test_avatar.py  test_billing.py  test_captions.py  test_change_classifier.py  test_dashboard_phase2.py  test_derived_stages.py  test_discovery_tools.py  test_editing_tools.py  test_edl.py  test_feedback.py  test_music_planner.py  test_pipeline_stages.py  test_preview_segment.py  test_provenance_integration.py  test_rendering.py  test_segment_cache.py  test_smart_crop.py  test_understanding_tools.py  test_visual_pipeline.py  test_voice_data_prep.py  test_voice_inference.py  test_voice_verify.py
tmp/: SITREP_2026-04-05_173312.md
(+517 files in other folders)
